; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-io.c_retrieve_io_and_region_from_bio.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-io.c_retrieve_io_and_region_from_bio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bio = type { i64 }
%struct.io = type { i32 }

@DM_IO_MAX_REGIONS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bio*, %struct.io**, i32*)* @retrieve_io_and_region_from_bio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @retrieve_io_and_region_from_bio(%struct.bio* %0, %struct.io** %1, i32* %2) #0 {
  %4 = alloca %struct.bio*, align 8
  %5 = alloca %struct.io**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store %struct.bio* %0, %struct.bio** %4, align 8
  store %struct.io** %1, %struct.io*** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.bio*, %struct.bio** %4, align 8
  %9 = getelementptr inbounds %struct.bio, %struct.bio* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i32, i32* @DM_IO_MAX_REGIONS, align 4
  %13 = sext i32 %12 to i64
  %14 = sub i64 0, %13
  %15 = and i64 %11, %14
  %16 = inttoptr i64 %15 to i8*
  %17 = bitcast i8* %16 to %struct.io*
  %18 = load %struct.io**, %struct.io*** %5, align 8
  store %struct.io* %17, %struct.io** %18, align 8
  %19 = load i64, i64* %7, align 8
  %20 = load i32, i32* @DM_IO_MAX_REGIONS, align 4
  %21 = sub nsw i32 %20, 1
  %22 = sext i32 %21 to i64
  %23 = and i64 %19, %22
  %24 = trunc i64 %23 to i32
  %25 = load i32*, i32** %6, align 8
  store i32 %24, i32* %25, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
